# eval_analyzer

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  pytest.ini  requirements.txt  run_testbench.bat
chatbot/: README.md  __init__.py  agent.py  cli.py  db.py  llm.py  queries.py  requirements.txt  router.py  test_smoke.py  tools.py
data/: .gitkeep
db_input/: CLAUDE.md  ai_extract.py  import_csv.py  import_text.py  run_import.bat  select_csv.ps1  template_example.csv
docs/: 5STAGE_COLUMNS.md  CODE_TO_PORT.md  DB_SCHEMA.md  EVALUATE_RETURN_SPEC.md  HANDOFF_TO_REPORT_SERVER.md  INTEGRATION_CONTRACT.md  PRECEDENT_RAG_HANDOFF.md  REPORT_GENERATOR_DATA_REQUEST.md  REPORT_SERVER_CONTEXT.md  data_pipeline_flowchart.html  evaluate_flow.html
eval_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
eval_engine/: CLAUDE.md  __init__.py  api.py  calibrate.py  cli.py  config.py  llm_client.py  precedent_client.py  store.py
eval_engine/pipeline/: CLAUDE.md  __init__.py  _rules.py  features.py  ingest.py  metrics.py  present.py  recommend.py  signatures.py  (+1 more)
samples/: sample_semiconductor_1000chips_15items_stepP2_fixedbin_1.csv  sample_semiconductor_1000chips_15items_stepP2_fixedbin_2.csv
seeds/: background_seed_example.csv
tests/: CLAUDE.md  conftest.py  test_calibrate.py  test_db_input_ai_extract.py  test_db_input_import.py  test_e2e.py  test_features.py  test_ingest_raw_df.py  test_metrics.py  test_signatures_status.py  test_store.py
tools/: CLAUDE.md  make_sample_raw_df.py  run_testbench.py  seed_demo_precedents.py  testbench_eval.py
(+10 files in other folders)
